--- a/LP 1 - TEAM PARIS FINAL.ipynb
+++ b/LP 1 - TEAM PARIS FINAL.ipynb
@@ -4570,22 +4570,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "cff63bc9-ac80-4409-b565-90180efd3acb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert the file to csv \n",
-    "\n",
-    "dataset = new3.to_csv('combined_dataset_analysis.csv')"
+    "new3 = combined_data\n",
+    "new_combined_data = new3.to_csv('combined_dataset_analysis.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "43459b97-03e7-48dc-9551-3ba86705e791",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PYTHONPATH: None\n",
+      "PATH: C:\\Users\\DEVICES\\anaconda3;C:\\Users\\DEVICES\\anaconda3\\Library\\mingw-w64\\bin;C:\\Users\\DEVICES\\anaconda3\\Library\\usr\\bin;C:\\Users\\DEVICES\\anaconda3\\Library\\bin;C:\\Users\\DEVICES\\anaconda3\\Scripts;C:\\Users\\DEVICES\\anaconda3\\bin;C:\\Users\\DEVICES\\anaconda3\\condabin;C:\\Users\\DEVICES\\anaconda3;C:\\Users\\DEVICES\\anaconda3\\Library\\mingw-w64\\bin;C:\\Users\\DEVICES\\anaconda3\\Library\\usr\\bin;C:\\Users\\DEVICES\\anaconda3\\Library\\bin;C:\\Users\\DEVICES\\anaconda3\\Scripts;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0;C:\\WINDOWS\\System32\\OpenSSH;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\130\\Tools\\Binn;C:\\Program Files (x86)\\Microsoft SQL Server\\130\\Tools\\Binn;C:\\Program Files\\Microsoft SQL Server\\130\\Tools\\Binn;C:\\Program Files\\Microsoft SQL Server\\130\\DTS\\Binn;C:\\Program Files\\dotnet;C:\\Program Files (x86)\\dotnet;C:\\JupyterLab;C:\\Program Files\\MySQL\\MySQL Server 8.0\\bin;C:\\Program Files\\Git\\cmd;C:\\Program Files\\MySQL\\MySQL Shell 8.0\\bin;C:\\Users\\DEVICES\\AppData\\Local\\Programs\\Python\\Python310\\Scripts;C:\\Users\\DEVICES\\AppData\\Local\\Programs\\Python\\Python310;C:\\Users\\DEVICES\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\DEVICES\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\DEVICES\\AppData\\Local\\GitHubDesktop\\bin\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "print(\"PYTHONPATH:\", os.environ.get('PYTHONPATH'))\n",
